# todo_rust

./: Readme.md
front_end/: Dockerfile  package-lock.json  package.json
front_end/public/: electron.js
front_end/src/: App.js
front_end/src/components/: CreateToDoItem.js  LoginForm.js  ToDoItem.js
front_end/src/css/: LoginForm.css
web_app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
web_app/.github/workflows/: run-tests.yml
web_app/database/: Dockerfile
web_app/database/database_management/: .env
web_app/database/database_management/1/: up.sql
web_app/database/database_management/2/: up.sql
web_app/scripts/: run_full_tests.sh  run_unit_tests.sh
web_app/src/: counter.rs  database.rs  jwt.rs  main.rs
web_app/src/json_serilization/: to_do_items.rs
web_app/src/models/user/: new_user.rs  user.rs
web_app/src/to_do/: enums.rs
web_app/src/to_do/structs/: base.rs  done.rs
web_app/src/views/: mod.rs
web_app/src/views/app/: content_loader.rs  items.rs  mod.rs
web_app/src/views/auth/: login.rs  logout.rs  mod.rs
web_app/src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs
web_app/src/views/users/: create.rs  mod.rs
web_app/tests/: docker-compose.yml  to_do_items.postman_collection.json
