[package]
name = "web_app"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
serde_yaml = "0.8.23"
serde = { version = "1.0.136", features = ["derive"] }

[dependencies]
actix-web = "4"
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
actix-service = "2.0.2"
futures = "0.3.28"
actix-cors = "0.6.1"
diesel = { version = "1.4.8", features = ["postgres","chrono","r2d2"] }
dotenv = "0.15.0"
chrono = {version = "0.4.19", features = ["serde"]}
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
bcrypt = "0.15.0"
uuid = {version = "1.6.0", features = ["serde", "v4"]}
jsonwebtoken = "9.2.0"
redis = "0.24.0"
env_logger = "0.9.3"
openssl = "*"
